--- a/src/ohana.scss
+++ b/src/ohana.scss
@@ -1,64 +1,5 @@
-body {
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  background-color: #fafafa;
-}
+@import "./mixins.scss";
+@import "./variables.scss";
 
-// Utilities
-
-.u-clearfix {
-  &::after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-}
-
-// Component
-
-$color-blue--link: #1a7de1;
-$color-blueDark--link: darken($color-blue--link, 5%);
-
-.c-link {
-  color: $color-blue--link;
-
-  &.is-hover,
-  &:hover {
-    color: $color-blueDark--link;
-  }
-}
-
-// z-index
-
-$zIndex-1: 10;
-$zIndex-2: 20;
-$zIndex-3: 30;
-$zIndex-4: 40;
-$zIndex-5: 50;
-$zIndex-6: 60;
-$zIndex-7: 70;
-$zIndex-8: 80;
-$zIndex-9: 90;
-
-// font
-
-.font-sansN4 {
-  font-style: normal;
-  font-weight: 400;
-}
-
-.font-sansI4 {
-  font-style: italic;
-  font-weight: 400;
-}
-
-.font-sansN7 {
-  font-style: normal;
-  font-weight: 700;
-}
-
-.font-sansI7 {
-  font-style: italic;
-  font-weight: 700;
-}
-
-// 
+// 引入工具类
+@import "./utilities.scss";
