--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,3 +1,9 @@
+$font-family-sans-serif: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB",
+"Microsoft YaHei", "微软雅黑", Arial, sans-serif !default;
+$font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
+$font-family-base: $font-family-sans-serif;
+
+$font-size-base: 1rem !default; // As browser default, typically `16px`
 
 // Colors
 $darker: #212121 !default;
