--- a/src/bread-crumb.scss
+++ b/src/bread-crumb.scss
@@ -1,24 +1,38 @@
 .breadcrumb {
-    font-size: 1rem;
-    white-space: nowrap;
+  font-size: 1rem;
+  white-space: nowrap;
+
+  li {
+    list-style: none;
+    display: flex;
+    align-items: center;
+  }
+
+  a {
+    display: flex;
+    align-items: center;
+    color: #a3a7a3;
+    padding: 0 0.75em;
+  }
 }
 
-.breadcrumb ul {
+.breadcrumb {
+  ul {
     align-items: flex-start;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
-}
+  }
+  // Alignment
+  &.is-centered {
+    ul {
+      justify-content: center;
+    }
+  }
 
-.breadcrumb ul li {
-    list-style: none;
-    display: flex;
-    align-items: center;
-}
-
-.breadcrumb ul li a {
-    display: flex;
-    align-items: center;
-    color: #a3a7a3;
-    padding: 0 .75em;
+  &.is-right {
+    ul {
+      justify-content: flex-end;
+    }
+  }
 }
